--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -6919,6 +6919,61 @@ padding-bottom: 70px;
   font-size: 16px;
 }
 
+/* vi - home user - stars app.js */
+/* vi - home user - stars app.js */
+/* vi - home user - stars app.js */
+/* vi - home user - stars app.js */
+/* vi - home user - stars app.js */
+/* vi - home user - stars app.js */
+.stars-app {
+  margin-bottom: 50px;
+}
+
+.stars-app .title {
+  font-size: 20px;
+  padding-left: 20px;
+  padding-bottom: 15px;
+  margin-top: 30px;
+}
+
+.stars-app .display {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.stars-app .display .a p {
+  font-size: 50px;
+}
+
+
+/* vi - home user - chart app.js */
+/* vi - home user - chart app.js */
+/* vi - home user - chart app.js */
+/* vi - home user - chart app.js */
+/* vi - home user - chart app.js */
+/* vi - home user - chart app.js */
+.chart-app .align .display {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.chart-app .align .display .a {
+  display: flex;
+  align-items: center;
+}
+
+
+/*
+.chart-app .align .display {
+  display: flex;
+  align-items: center;
+  font-size: 17px;
+}*/
+
+
+
 /* 1350px */
 /* 1350px */
 /* 1350px */
