--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -7469,6 +7469,11 @@ padding-bottom: 70px;
 /* vi - profil user - Favorite.js */
 /* vi - profil user - Favorite.js */
 /* vi - profil user - Favorite.js */
+.page-favorite-preuve-social {
+  padding-left: 62px;
+  margin-bottom: 50px;
+}
+
 .favorite-app-title {
   margin-left: 20px;
   margin-top: 20px;
@@ -7489,15 +7494,20 @@ padding-bottom: 70px;
 .favorite-app-popularity {
   margin-left: 40px;
   margin-right: 10px;
-  margin-bottom: 15px;
+  margin-bottom: 35px;
   color: #444;
+  display: flex;
+}
+
+.favorite-app-popularity p {
+  padding-right: 5px; 
 }
 
 .favorite-app .a {
   margin-left: 40px;
   display: flex;
   margin-right: 10px;
-  margin-bottom: 35px;
+  margin-bottom: 5px;
   flex-wrap: nowrap;
   color: black;
 }
@@ -7521,6 +7531,71 @@ padding-bottom: 70px;
   width: 70px;
   height: 70px;
 }
+
+.delete-items-in-favorite .display {
+  display: flex;
+  margin-left: 20px;
+}
+
+.delete-items-in-favorite .display .a p {
+  font-size: 14px;
+  background-color: #eee;
+  color: #444;
+  padding: 2px 5px;
+}
+
+.popup-delete-opacity {
+  background-color: #00000050;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.popup-delete-opacity .align {
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.popup-delete-opacity .align .card {
+  width: 300px;
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.popup-delete-opacity .align .card .display-btn {
+  display: flex;
+}
+
+.popup-delete-opacity .align .card .a button {
+  padding: 6px 18px;
+  margin-right: 10px;
+  margin-top: 15px;
+  border: 1px solid #444;
+  background-color: #fff;
+  cursor: pointer;
+  font-size: 14px;
+  border-radius: 5px;
+  color: #444;
+}
+
+.popup-delete-opacity .align .card .b button {
+  padding: 6px 18px;
+  margin-top: 15px;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+  border-radius: 5px;
+  color: #444;
+  background-color: #eee;
+  border: none;
+}
+
 
 
 /* 1350px */
@@ -8244,6 +8319,7 @@ padding-bottom: 70px;
   /* vixinol */
   /* vixinol */
   
+
   .profil-user-not-connected .display .block {
     width: 400px;
   }
@@ -9731,6 +9807,10 @@ padding-bottom: 70px;
 /* 400px */
 @media screen and (max-width: 400px) {
   /* vixinol */
+  .popup-delete-opacity .align .card {
+    width: 250px;
+  }
+
   .popup-all-functionality-opacity .card {
     width: 280px;
   }
@@ -10296,6 +10376,10 @@ padding-bottom: 70px;
     display: none;
   }
 
+  .popup-delete-opacity .align .card {
+    width: 200px;
+  }
+
   .search-app input[type="text"] {
     padding: 6px 10px;
   }
@@ -10721,6 +10805,10 @@ padding-bottom: 70px;
     display: none;
   }
 
+  .popup-delete-opacity .align .card {
+    width: 180px;
+  }
+
   .popup-all-functionality-opacity .card {
     width: 210px;
     padding: 20px 10px;
@@ -11016,6 +11104,21 @@ padding-bottom: 70px;
 
 @media screen and (max-width: 230px) {
   /* vixinol */
+  .popup-delete-opacity .align .card {
+    width: 160px;
+  }
+
+  .popup-delete-opacity .align .card .display-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .popup-delete-opacity .align .card .a button {
+    margin-right: 0px;
+  }
+
   .profil-user-not-connected .display .block {
     width: 210px;
   }
@@ -11182,6 +11285,10 @@ padding-bottom: 70px;
 /* vixinol */
 /* vixinol */
 /* vixinol */
+.popup-delete-opacity .align .card {
+  width: 140px;
+}
+
 .popup-all-functionality-opacity .card {
   width: 170px;
   padding: 20px 10px;
