--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -7597,6 +7597,135 @@ padding-bottom: 70px;
 }
 
 
+/* vi - home user - sponsored App.js */
+/* vi - home user - sponsored App.js */
+/* vi - home user - sponsored App.js */
+/* vi - home user - sponsored App.js */
+/* vi - home user - sponsored App.js */
+/* vi - home user - sponsored App.js */
+/* vi - home user - sponsored App.js */
+/* vi - home user - sponsored App.js */
+.sponsored-app {
+  margin-right: 25px;
+  margin-left: 25px;
+  margin-top: 100px;
+}
+
+.display-sponsored-app-api {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  cursor: pointer;
+}
+
+.sponsored-app .align {
+  margin-right: 7px;
+  display: flex;
+  justify-content: center;
+}
+
+.sponsored-app .column {
+  display: flex;
+  flex-direction: column;
+}
+
+.sponsored-app .title p {
+  font-size: 15px;
+  color: #444;
+  padding: 5px;
+}
+
+.sponsored-app .images img {
+  width: 300px;
+  height: 160px;
+  border-radius: 10px;
+  margin-right: 10px;
+}
+
+.sponsored-app .short-image img {
+  width: 70px;
+  height: 70px;
+  border-radius: 10px;
+  margin-right: 10px;
+}
+
+.sponsored-app .preuve-social {
+  width: 300px;
+  margin-bottom: 30px;
+  color: #444;
+}
+
+.sponsored-app .see-more {
+  margin-left: 25px;
+  margin-bottom: 150px;
+}
+
+.sponsored-app .see-more svg {
+  width: 40px;
+}
+
+.sponsored-app .note {
+  display: flex;
+  padding-top: 7px;
+}
+
+.sponsored-app .nameOfApp p {
+  color: black;
+  font-size: 17px;
+}
+
+.sponsored-app .note p {
+  padding-right: 5px;
+  color: black;
+  font-size: 16px;
+}
+
+.sponsored-app .display {
+  display: flex;
+}
+
+.sponsored-app .chart {
+  display: flex;
+  align-items: center;
+  margin-bottom: 7px;
+}
+
+/* vi - functionnality - popup translate.js */
+/* vi - functionnality - popup translate.js */
+/* vi - functionnality - popup translate.js */
+/* vi - functionnality - popup translate.js */
+/* vi - functionnality - popup translate.js */
+/* vi - functionnality - popup translate.js */
+.popup-translate-opacity {
+  width: 100%;
+  height: 100%;
+  background: #00000050;
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow-y: auto;
+}
+
+.popup-translate-opacity .align {
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  margin-top: 5px;
+  padding-bottom: 100px;
+}
+
+.popup-translate-opacity .card {
+  width: 200px;
+  background: white;
+  padding: 20px;
+}
+
+.back-btn-popup-translate {
+  background-color: #fd7e14;
+  padding: 15px;
+}
 
 /* 1350px */
 /* 1350px */
@@ -8085,6 +8214,32 @@ padding-bottom: 70px;
   }
 
   /* vixinol */
+  .sponsored-app {
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+
+  .sponsored-app .align {
+    margin-right: 3px;
+  }
+
+  .sponsored-app .images img {
+    width: 270px;
+    height: 160px;
+  }
+
+  .sponsored-app .preuve-social {
+    width: 270px;
+  }
+
+  .sponsored-app .see-more {
+    margin-left: 5px;
+  }
+
+  .sponsored-app .see-more svg {
+    width: 35px;
+  }
+
   .navbar-top-vi .pc .download {
     margin-left: 80px;
     margin-top: 5px;
@@ -8318,8 +8473,6 @@ padding-bottom: 70px;
   /* vixinol */
   /* vixinol */
   /* vixinol */
-  
-
   .profil-user-not-connected .display .block {
     width: 400px;
   }
@@ -9429,6 +9582,32 @@ padding-bottom: 70px;
   }
 
   /* vixinol */
+  .sponsored-app {
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+
+  .sponsored-app .align {
+    margin-right: 3px;
+  }
+
+  .sponsored-app .images img {
+    width: 230px;
+    height: 130px;
+  }
+
+  .sponsored-app .preuve-social {
+    width: 230px;
+  }
+
+  .sponsored-app .see-more {
+    margin-left: 5px;
+  }
+
+  .sponsored-app .see-more svg {
+    width: 30px;
+  }
+
   .popup-all-functionality-opacity .card .display .a button {
     margin-right: 0px;
   }
@@ -10212,6 +10391,10 @@ padding-bottom: 70px;
 /* vixinol */
 /* vixinol */
 /* vixinol */
+.popup-translate-opacity .card {
+  width: 170px;
+}
+
 .profil-user-not-connected .display .block {
   width: 260px;
 }
@@ -10376,6 +10559,33 @@ padding-bottom: 70px;
     display: none;
   }
 
+  .sponsored-app {
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+
+  .sponsored-app .align {
+    margin-right: 0px;
+  }
+
+  .sponsored-app .images img {
+    width: 210px;
+    height: 130px;
+    margin-right: 10px;
+  }
+
+  .sponsored-app .preuve-social {
+    width: 210px;
+  }
+
+  .sponsored-app .see-more {
+    margin-left: 5px;
+  }
+
+  .sponsored-app .see-more svg {
+    width: 30px;
+  }
+
   .popup-delete-opacity .align .card {
     width: 200px;
   }
@@ -10521,6 +10731,10 @@ padding-bottom: 70px;
     }  
 
   /* vixinol */
+  .popup-translate-opacity .card {
+    width: 150px;
+  }
+
   .popup-all-functionality-opacity .card {
     width: 220px;
     padding: 20px 10px;
@@ -10670,6 +10884,33 @@ padding-bottom: 70px;
   /* vixinol */
   /* vixinol */  
   /* vixinol */
+  .sponsored-app {
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+
+  .sponsored-app .align {
+    margin-right: 0px;
+  }
+
+  .sponsored-app .images img {
+    width: 190px;
+    height: 115px;
+    margin-right: 10px;
+  }
+
+  .sponsored-app .preuve-social {
+    width: 190px;
+  }
+
+  .sponsored-app .see-more {
+    margin-left: 5px;
+  }
+
+  .sponsored-app .see-more svg {
+    width: 30px;
+  }
+
   .about-app .title {
     font-size: 18px;
   }
@@ -11104,6 +11345,10 @@ padding-bottom: 70px;
 
 @media screen and (max-width: 230px) {
   /* vixinol */
+  .popup-translate-opacity .card {
+    width: 120px;
+  }
+
   .popup-delete-opacity .align .card {
     width: 160px;
   }
@@ -11152,6 +11397,33 @@ padding-bottom: 70px;
 }
 
 /* vixinol */
+.sponsored-app {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.sponsored-app .align {
+  margin-right: 0px;
+}
+
+.sponsored-app .images img {
+  width: 180px;
+  height: 110px;
+  margin-right: 10px;
+}
+
+.sponsored-app .preuve-social {
+  width: 180px;
+}
+
+.sponsored-app .see-more {
+  margin-left: 5px;
+}
+
+.sponsored-app .see-more svg {
+  width: 30px;
+}
+
 .popup-all-functionality-opacity .card {
   width: 190px;
   padding: 20px 10px;
@@ -11285,6 +11557,33 @@ padding-bottom: 70px;
 /* vixinol */
 /* vixinol */
 /* vixinol */
+.sponsored-app {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.sponsored-app .align {
+  margin-right: 0px;
+}
+
+.sponsored-app .images img {
+  width: 160px;
+  height: 100px;
+  margin-right: 10px;
+}
+
+.sponsored-app .preuve-social {
+  width: 160px;
+}
+
+.sponsored-app .see-more {
+  margin-left: 5px;
+}
+
+.sponsored-app .see-more svg {
+  width: 30px;
+}
+
 .popup-delete-opacity .align .card {
   width: 140px;
 }
