--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -7608,7 +7608,7 @@ padding-bottom: 70px;
 .sponsored-app {
   margin-right: 25px;
   margin-left: 25px;
-  margin-top: 100px;
+  margin-top: 30px;
 }
 
 .display-sponsored-app-api {
@@ -7670,6 +7670,7 @@ padding-bottom: 70px;
 }
 
 .sponsored-app .nameOfApp p {
+  width: 200px;
   color: black;
   font-size: 17px;
 }
@@ -7726,6 +7727,120 @@ padding-bottom: 70px;
   background-color: #fd7e14;
   padding: 15px;
 }
+
+/* vi - home user - App By Categorie.js */
+/* vi - home user - App By Categorie.js */
+/* vi - home user - App By Categorie.js */
+/* vi - home user - App By Categorie.js */
+/* vi - home user - App By Categorie.js */
+/* vi - home user - App By Categorie.js */
+/* vi - home user - App By Categorie.js */
+.app-by-categorie {
+  margin: 20px 30px;
+}
+
+.app-by-categorie .overflow {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+}
+
+.app-by-categorie .sous-categorie p {
+  font-size: 22px;
+  padding-bottom: 10px;
+}
+
+.app-by-categorie .images img {
+  width: 90px;
+  height: 90px;
+  border-radius: 5px;
+  margin-right: 15px;
+}
+
+.app-by-categorie .images p {
+  padding-bottom: 30px;
+  width: 90px;
+  text-align: center;
+  font-size: 17px;
+  color: black;
+}
+
+.app-by-categorie .overflow .next {
+  margin-top: 40px;
+}
+
+/* vi - home user - rediger-un-avis-home-user.js */
+/* vi - home user - rediger-un-avis-home-user.js */
+/* vi - home user - rediger-un-avis-home-user.js */
+/* vi - home user - rediger-un-avis-home-user.js */
+/* vi - home user - rediger-un-avis-home-user.js */
+/* vi - home user - rediger-un-avis-home-user.js */
+/* vi - home user - rediger-un-avis-home-user.js */
+.rediger-un-avis-home-user {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.rediger-un-avis-home-user .overflow {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+}
+
+.rediger-un-avis-home-user .overflow .column {
+  margin-right: 30px;
+}
+
+.rediger-un-avis-home-user .images img {
+  width: 50px;
+  height: 50px;
+  border-radius: 8px;
+}
+
+.rediger-un-avis-home-user .title p {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.rediger-un-avis-home-user .a .nameOfApp p {
+  font-size: 18px;
+  width: 120px;
+}
+
+.rediger-un-avis-home-user .a p {
+  font-size: 14px;
+  color: #444;
+  padding-top: 5px;
+}
+
+.rediger-un-avis-home-user .display .a {
+  padding-left: 12px;
+}
+
+.rediger-un-avis-home-user .overflow .stars {
+  width: 200px;
+}
+
+.rediger-un-avis-home-user .stars svg {
+  padding-top: 7px;
+  padding-right: 20px;
+}
+
+.rediger-un-avis-home-user .display {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.rediger-un-avis-home-user .b {
+  padding-bottom: 40px;
+}
+
+.rediger-un-avis-home-user .b p {
+  color: #fd7e14;
+  padding-top: 13px;
+  cursor: pointer;
+}
+
 
 /* 1350px */
 /* 1350px */
@@ -8279,8 +8394,6 @@ padding-bottom: 70px;
    /* alrani */
    /* alrani */
    /* alrani */
-
-
 .pc-one-book {
   display: none;
  }
@@ -8473,6 +8586,15 @@ padding-bottom: 70px;
   /* vixinol */
   /* vixinol */
   /* vixinol */
+  .rediger-un-avis-home-user {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .app-by-categorie {
+    margin: 20px 15px;
+  }
+
   .profil-user-not-connected .display .block {
     width: 400px;
   }
@@ -9596,6 +9718,10 @@ padding-bottom: 70px;
     height: 130px;
   }
 
+  .sponsored-app .nameOfApp p {
+    width: 160px;
+  }
+
   .sponsored-app .preuve-social {
     width: 230px;
   }
@@ -10559,6 +10685,10 @@ padding-bottom: 70px;
     display: none;
   }
 
+  .sponsored-app .nameOfApp p {
+    width: 140px;
+  }
+
   .sponsored-app {
     margin-right: 15px;
     margin-left: 15px;
@@ -10901,6 +11031,10 @@ padding-bottom: 70px;
 
   .sponsored-app .preuve-social {
     width: 190px;
+  }
+
+  .sponsored-app .nameOfApp p {
+    width: 120px;
   }
 
   .sponsored-app .see-more {
@@ -11416,6 +11550,10 @@ padding-bottom: 70px;
   width: 180px;
 }
 
+.sponsored-app .nameOfApp p {
+  width: 110px;
+}
+
 .sponsored-app .see-more {
   margin-left: 5px;
 }
@@ -11574,6 +11712,10 @@ padding-bottom: 70px;
 
 .sponsored-app .preuve-social {
   width: 160px;
+}
+
+.sponsored-app .nameOfApp p {
+  width: 90px;
 }
 
 .sponsored-app .see-more {
